<resources>
    <string name="textoInformativo">
        Este aplicativo foi desenvolvico com Android Studio através de conceitos apresentados
        na aula de Computação Para Dispositivos Móveis lecionada pelo professor Eugenio no
        quarto semestre da faculdade de Análise e Desenvolvimento de Sistemas.
        No app foram usados alguns conceitos exibidos durante as aulas, como banco de dados,
        alteraçao de imagens atraves da programação, acesso a mapas, sensores.
        No primeiro item do menú foi utilizado o sensor de luz, onde algumas imagens são
        mostradas de acordo com a intensidade da luminosidade.
        No segundo item podemos escrever um texto e compartilhar.
        No terceiro item está um cadastro simples no banco de dados, onde conseguimos gravar
        os dados em um banco de dados e consultar os dados na tela consultas.
        No quarto fica um simples acesso ao mapa.
        No quinto é o cálculo da formula de Bhaskara que depois dos resultados mostrados, basta
        sacudir o aparelho para resetar os campos de entrada de dados.
        E por ultimo um joguinho simples bem conhecido que é o jokempo onde foi utilizado a classe
        random para a máquina escolher pedra, papel ou tesoura. Quem fizer dez pontos primeiro ganha,
        e após, aparece o resultado e um botão de reset para reiniciar.Neste tmabeo foi utilizado
        o conceito de mucança de imagens de fundo\n\n
        INTEGRANTES\n\n
        Anderson Santos Fernandes 7328085 \n
        Gabriela O Farrill Cesar Bota 7681636\n
        Gustavo Dias Stanev 7395157\n
        Maicon Douglas 6640840\n
        Stenio Santana Pompeu  2311534\n
        Tatiane Cristina Froes de Araujo 7412800\n
        Thiago Silva correia 6245206\n
        Vítor Dornelas Carlos RA: 6796045\n


    </string>
    <string name="texto">
        Computação para dispositivos móveis FMU 2021
        
    </string>
    <string name="blackBoard">Acessar o black Board \nFMU</string>
    <string name="app_name">Trabalho CpDM</string>
    <string name="sLuz">Sensor de luz</string>
    <string name="bt1">Botõ 1</string>

    <string name="menu1">Sensor de luz</string>
    <string name="menu2">Compartilhamento</string>
    <string name="menu3">Banco de dados</string>
    <string name="menu4">Mapa</string>
    <string name="Fbhaskara">Bhaskara</string>
    <string name="jokenpo">Jokenpô</string>
    <string name="menu08">Con. Temperatura</string>
    <string name="about">Informações</string>
    <string name="desenho">Desenho</string>
    <string name="sair">Sair</string>

    <string name="msgJogador">Vem jogar comigo</string>
    <string name="pedra">Pedra</string>
    <string name="papel">Papel</string>
    <string name="tesoura">Tesoura</string>
    <string name="jogador">Jogador</string>
    <string name="maquina">Máquina</string>
    <string name="jogar">Jogar</string>
    <string name="apostando">Vamos ver quem ganha!</string>
    <string name="zero">0</string>

    <string name="texto1">Valor</string>
    <string name="vlrA">Valor de A</string>
    <string name="vlrB">Valor de B</string>
    <string name="vlrC">Valor de C</string>
    <string name="digite">Digite...</string>
    <string name="bhaskara">Formula de Bhaskara</string>
    <string name="calculo">Calcular</string>
    <string name="sensor_de_luminosidade">Sensor de luminosidade</string>

    <string name="titulo_compartilha">Escreva um texto e compartilhe</string>
    <string name="btCompartilhar">Compartilhar</string>
    <string name="title_activity_localizador">Localizador</string>

    <string name="bd">CRUD</string>
    <string name="matricula">Matrícula</string>
    <string name="nome">Nome</string>
    <string name="idade">Idade</string>
    <string name="cpf">CPF</string>
    <string name="salvar">Salvar</string>
    <string name="consulta">Lista de cadastrados</string>
    <string name="consultar">Consultar</string>
    <string name="title_activity_mapa">Mapa</string>
    <string name="todo">TODO</string>
    <string name="string_todo" />

    <string name="temperatura">Conversor de temperatura</string>
    <string name="temp">Conv. Temp</string>
    <string name="cepf">Celcius para Fahrenheit</string>
    <string name="fpc"> Fahrenheit para Celcius </string>

    <string name="tituloT2">Pitagoras</string>

    <string name="hipotenusa">Hipotenusa</string>
    <string name="catetoMaior">Cateto Maior</string>
    <string name="catetoMenor">Cateto Menor</string>
    <string name="calcular">Calcular</string>
    <string name="instrucao">Para realizar o cálculo insira dois valores
        deixando vazio apenas o que quer descobrir. \n
        O valor do cateto não deve ser maior que o da hipotenusa.\n
        Clique longo em calcular = limpa valores.
    </string>


</resources>