<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradiente"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_margin="15dp"
        android:padding="15dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/android2"
        tools:ignore="ImageContrastCheck"
         />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="132dp"
        android:layout_height="143dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/string_todo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:srcCompat="@drawable/fmu" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="134dp"
        android:layout_height="139dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:text="@string/blackBoard"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imagePlayPause"
        android:layout_width="48dp"
        android:layout_height="42dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:srcCompat="@drawable/ic_play" />


</androidx.constraintlayout.widget.ConstraintLayout>