<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Bhaskara"
    android:background="@drawable/gradiente2"
    >

    <TextView
        android:id="@+id/formula"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#D5847D"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/bhaskara"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/textView2"
        style="@style/marginUp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/digite"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="52dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/formula"
        />

    <EditText
        android:id="@+id/editA"
        style="@style/marginUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/vlrA"
        android:inputType="numberSigned"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="101dp"
        tools:layout_editor_absoluteY="86dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        />

    <TextView
        android:id="@+id/textView3"
        style="@style/marginUp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/digite"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="141dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editA"
        />

    <EditText
        android:id="@+id/editB"
        style="@style/marginUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/vlrB"
        android:inputType="numberSigned"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="101dp"
        tools:layout_editor_absoluteY="176dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView3"
        />

    <TextView
        android:id="@+id/textView4"
        style="@style/marginUp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/digite"


        android:textStyle="bold"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="230dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editB"
        />

    <EditText
        android:id="@+id/editC"
        style="@style/marginUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/vlrC"
        android:inputType="numberSigned"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="101dp"
        tools:layout_editor_absoluteY="265dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView4"
        />

    <TextView
        android:id="@+id/raizDelta"
        style="@style/marginUp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="340dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editC"
        />

    <TextView
        android:id="@+id/x1linha"
        style="@style/marginUp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="390dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/raizDelta"
        />

    <TextView
        android:id="@+id/x2linha"
        style="@style/marginUp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="440dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/x1linha"
        />

    <Button
        android:id="@+id/buttonCalc"
        style="@style/marginUp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:backgroundTint="#D5847D"
        android:text="@string/calculo"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="131dp"
        tools:layout_editor_absoluteY="481dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/x2linha"
        />

    <TextView
        android:id="@+id/textViewReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:padding="10dp"
        tools:layout_editor_absoluteX="146dp"
        tools:layout_editor_absoluteY="511dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonCalc"
        />


</androidx.constraintlayout.widget.ConstraintLayout>